Bugfixes and aligned images

--- a/style.css
+++ b/style.css
@@ -182,8 +182,8 @@ body {
   vertical-align: top;
   width:10vmin;
   height:10vmin;
-  margin-top:-2vh;
-  margin-left:15vw;
+  margin-top:3vh;
+  margin-left:7vw;
   z-index:2.5;
   background-size:10vmin 10vmin;
 }
@@ -212,7 +212,7 @@ body {
 .boldCredit {
   display: inline-block;
   vertical-align: top;
-  margin-left:10vw;
+  margin-left:3vw;
   text-align: left;
   font-size:5vmin;
   color:brown;
